@@ -53,7 +53,7 @@ xman_SOURCES += \
         print.h
 endif
 
-appman_SOURCES = \
+appman_PRE = \
         xman.man
 
 dist_data_DATA = xman.help
@@ -78,9 +78,9 @@ CLEANFILES = Xman
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA)
 
 SED = sed
